UI: Fix hamburger visibility and bump version (v1.5.3)

--- a/public/style.css
+++ b/public/style.css
@@ -1712,7 +1712,7 @@ img {
         display: block;
         width: 25px;
         height: 3px;
-        background-color: var(--color-dark);
+        background-color: #fff;
         margin: 5px 0;
         transition: 0.3s;
     }
